# Stella_Tower_Assistant

./: .gitignore  README.md  actions.py  auto_tower.py  config.py  main.py  shop.py  state.py  vision.py
apps/api/: pyproject.toml  requirements.txt
apps/api/src/stellatowerassistant/: cli.py  ocr_capture.py  ocr_image_cli.py
apps/api/src/stellatowerassistant/api/: app.py
apps/api/src/stellatowerassistant/api/routes/: __init__.py  automation.py  emulator.py  health.py  settings.py  system.py  templates.py
apps/api/src/stellatowerassistant/api/schemas/: __init__.py  automation.py  settings.py  templates.py
apps/api/src/stellatowerassistant/api/ws/: __init__.py  events.py
apps/api/src/stellatowerassistant/core/automation/: __init__.py  actions.py  ocr.py  potential.py  readings.py  run_loop.py  shop.py  vision.py
apps/api/src/stellatowerassistant/core/config/: settings.py
apps/api/src/stellatowerassistant/core/runtime/: __init__.py  events.py  state.py
apps/api/src/stellatowerassistant/core/services/: __init__.py  automation_service.py  emulator_service.py  template_service.py
apps/api/src/stellatowerassistant_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/api/tests/: test_events.py  test_settings.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/electron/: main.cjs  preload.cjs
apps/web/src/: env.d.ts  main.ts
apps/web/src/app/layouts/: AppShell.vue
docs/: api-contract.md  architecture.md
scripts/: start-dev.ps1  start-ocr-capture.ps1  start-window.ps1
(+18 files in other folders)
