[project]
name = "stellatowerassistant-api"
version = "0.2.0"
description = "Local automation API and CLI for Stella Tower Assistant."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "keyboard==0.13.5",
    "numpy>=2.2.6",
    "opencv-python==4.12.0.88",
    "pillow==12.0.0",
    "pyautogui==0.9.54",
    "pygetwindow>=0.0.9",
    "pytesseract==0.3.13",
    "uvicorn>=0.32.0",
]

[project.scripts]
stella-tower = "stellatowerassistant.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
